feat(index) add html
add html for header

Close

--- a/index.html
+++ b/index.html
@@ -21,7 +21,33 @@
 </head>
 <body>
 
+    <!-- Navigation -->
+    <nav class="navbar">
 
+        <!-- Container -->
+        <div class="container">
+            <!-- Logo -->
+            <div class="inner__brand">
+                <a href="#"><img src="assets/img/logo.png" alt="institute-logo"></a>
+            </div>
+
+            <!-- Hamburger -->
+            <button class="inner__toggle" onclick="hamburgerFunction()">
+                <i class="fa fa-bars"></i>
+            </button>
+
+            <!-- Links -->
+            <div class="inner__collapse" id="my__navbar">
+                <a href="#sec1" class="nav__link active">Home</a>
+                <a href="#sec2" class="nav__link">Features</a>
+                <a href="#sec3" class="nav__link">Work</a>
+                <a href="#sec4" class="nav__link">Team</a>
+                <a href="#sec5" class="nav__link">Contact</a>
+            </div>
+
+            <div class="inner__search"></div>
+        </div>
+    </nav>
 
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
