build (_header) build header section continue , add mixins (line, border radius), container, add search icon
build header section continue with reponsive
add line, border radius in mixins
change color name in _variables
add style for a, ul, p, ol in _common
add container in _main
add search icon

Close

--- a/index.html
+++ b/index.html
@@ -31,21 +31,26 @@
                 <a href="#"><img src="assets/img/logo.png" alt="institute-logo"></a>
             </div>
 
+            <!-- Links -->
+            <div class="inner__collapse" id="my__navbar">
+                <a href="#sec1" class="nav__link active">Trang chủ</a>
+                <a href="#sec2" class="nav__link">Giới thiệu</a>
+                <a href="#sec3" class="nav__link">Sách</a>
+                <a href="#sec4" class="nav__link">Online</a>
+                <a href="#sec5" class="nav__link">Sự kiện</a>
+                <a href="#sec6" class="nav__link">Tin tức</a>
+            </div>
+
             <!-- Hamburger -->
             <button class="inner__toggle" onclick="hamburgerFunction()">
                 <i class="fa fa-bars"></i>
             </button>
 
-            <!-- Links -->
-            <div class="inner__collapse" id="my__navbar">
-                <a href="#sec1" class="nav__link active">Home</a>
-                <a href="#sec2" class="nav__link">Features</a>
-                <a href="#sec3" class="nav__link">Work</a>
-                <a href="#sec4" class="nav__link">Team</a>
-                <a href="#sec5" class="nav__link">Contact</a>
+            <!-- Search -->
+            <div class="inner__search">
+                <input type="text" id="search" placeholder="Search...">
+                <img src="assets/img/search-icon.png" alt="Search">
             </div>
-
-            <div class="inner__search"></div>
         </div>
     </nav>
 
