feat(_banner) add home section
add content and background image

Close

--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
             </div>
         </div>
     </nav>
+    <!-- Main -->
+    <main>
+        <!--  Section Start -->
+        <section id="sec1" class="home">
+            <!-- Banner Title-->
+            <div class="home__content">
+                <h2>Khai mở trí tuệ thành công <span>sứ mệnh nâng tầm người việt trẻ</span></h2>
+            </div>
+            <!-- Background -->
+            <div class="home__background" style="background-image: url('assets/img/_home/background.png')">
+            </div>
+        </section>
+    </main>
 
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
