feat(_banner): add elements, style home__content class
add pull down and slider for background image, style home__content

Close

--- a/index.html
+++ b/index.html
@@ -58,11 +58,24 @@
         <!--  Section Start -->
         <section id="sec1" class="home">
             <!-- Banner Title-->
-            <div class="home__content">
-                <h2>Khai mở trí tuệ thành công <span>sứ mệnh nâng tầm người việt trẻ</span></h2>
+            <div class="container">
+                <div class="home__content">
+                    <h4>Khai mở trí tuệ thành công <p>sứ mệnh nâng tầm người việt trẻ</p></h4>
+                </div>
+                <div class="home__toBottom">
+                    <div class="toBottom__content">Kéo xuống</div>
+                 <img class="toBottom__img" src="assets/img/_home/pull-down.png" alt="Pull down">
+                </div>
             </div>
-            <!-- Background -->
-            <div class="home__background" style="background-image: url('assets/img/_home/background.png')">
+            <!--  background -->
+            <div class="home__background">
+                <!-- Background image -->
+                <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
+                <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
+                <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
+                <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
+                <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
+                <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
             </div>
         </section>
     </main>
