feat(_about): add about section, add show width window
add title class in main (use multi page)
add about section (30%)
caculate margin when change width window in main.js

Close

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
     <!-- Main -->
     <main>
-        <!--  Section Start -->
+        <!--  Section Home Start -->
         <section id="sec1" class="home">
             <!-- Banner Title-->
             <div class="container">
@@ -78,7 +78,21 @@
                 <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
             </div>
         </section>
+        <!--  Section Home End -->
+
+        <!--  Section About Start -->
+        <section id="sec2" class="about">
+            <div class="title">
+                <h4>Về chúng tôi</h4>
+            </div>
+            <div class="content">
+                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+            </div>
+            <button class="btn btn__see__more">Xem thêm</button>
+        </section>
     </main>
+    <!-- End Main -->
 
 <!--[if lt IE 8]>
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
