feat (_banner) add position for dots slider, add action of play and pause button
add position for dots slider desktop and device
add action of play and pause button control slider

Close

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
                 <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
                 <div class="home__background__item" style="background-image: url('assets/img/_home/background.png')"></div>
             </div>
+            <div class="buttons">
+                <a href="#"><img class="pause" src="assets/img/pause.png" alt="Pause"></a>
+                <a href="#" class="play"><i class="fas fa-play"></i></a>
+            </div>
         </section>
         <!--  Section Home End -->
 
