feat(main.js, about, banner) fix banner, style about, write js
style about
fix banner slider
write js to use distance for element same container

Close

--- a/index.html
+++ b/index.html
@@ -86,14 +86,16 @@
 
         <!--  Section About Start -->
         <section id="sec2" class="about">
-            <div class="title">
+            <div class="about__content title">
                 <h4>Về chúng tôi</h4>
+                <div class="content">
+                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                </div>
+                <button class="btn btn__see__more">Xem thêm</button>
             </div>
-            <div class="content">
-                <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+            <div class="about__image" style="background-image: url('assets/img/_about/active.png')">
             </div>
-            <button class="btn btn__see__more">Xem thêm</button>
         </section>
     </main>
     <!-- End Main -->
