feate(_main.js) add animate for search
show input search when click search button

Close

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
             <!-- Search -->
             <div class="inner__search">
-                <input type="text" id="search" placeholder="Search...">
-                <img src="assets/img/search-icon.png" alt="Search">
+                <input type="text" placeholder="Search...">
+                <img src="assets/img/search-icon.png" alt="Search" id="search">
             </div>
         </div>
     </nav>
