feat(_about, _banner, _introduce, main.css, main.js) write js to control position, style button main.scss, add introduce
write js to control position and action of elements
add style buttons in  main.scss
add style of introduce section

Close

--- a/index.html
+++ b/index.html
@@ -86,17 +86,44 @@
 
         <!--  Section About Start -->
         <section id="sec2" class="about">
-            <div class="about__content title">
-                <h4>Về chúng tôi</h4>
+            <div class="about__content">
+                <h4 class="title">Về chúng tôi</h4>
                 <div class="content">
-                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
+                    <h5>Lorem ipsum dolor sit amet, consectetur adip- iscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas...</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
                 </div>
                 <button class="btn btn__see__more">Xem thêm</button>
             </div>
             <div class="about__image" style="background-image: url('assets/img/_about/active.png')">
             </div>
-        </section>
+        </section> <!--  Section About End -->
+
+        <!--  Section Introduce Start -->
+        <section class="introduce" >
+            <div class="introduce__container" style="background-color: rgba(0, 0, 0, 0.5)">
+                <div class="introduce__container__content       ">
+                    <h4 class="title">Khoá học & sự kiện</h4>
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
+                    </div>
+                    <button class="btn btn__buy__course">Mua khoá học</button>
+                </div>
+            </div>
+
+            <div class="introduce__backgrounds">
+                <!-- Background image -->
+                <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
+                <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
+                <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
+                <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
+                <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
+                <div class="introduce__background__item" style="background-image: url('assets/img/_about/analytics.png')"></div>
+            </div>
+            <div class="buttons">
+                <a href="#"><img class="pause" src="assets/img/pause.png" alt="Pause"></a>
+                <a href="#" class="play"><i class="fas fa-play"></i></a>
+            </div>
+        </section> <!--  Section Introduce End -->
     </main>
     <!-- End Main -->
 
