--- a/index.html
+++ b/index.html
@@ -124,6 +124,44 @@
                 <a href="#" class="play"><i class="fas fa-play"></i></a>
             </div>
         </section> <!--  Section Introduce End -->
+        <!--  Section Introduce Start -->
+        <section class="book container">
+            <h4 class="title">Sách</h4>
+            <div class="grid">
+                <div class="book__card">
+                    <img src="assets/img/_book/book_01.png" alt="" class="book__image">
+                    <div class="book__header">
+                        <p class="book__title">Lập trình ngôn ngữ tư duy</p>
+                        <p class="book__price">120,000<sup>đ</sup></p>
+                    </div>
+                    <button class="btn btn__buy__book">Mua ngay</button>
+                </div>
+                <div class="book__card">
+                    <img src="assets/img/_book/book_02.png" alt="" class="book__image">
+                    <div class="book__header">
+                        <p class="book__title">Lập trình ngôn ngữ tư duy</p>
+                        <p class="book__price">120,000<sup>đ</sup></p>
+                    </div>
+                    <button class="btn btn__buy__book">Mua ngay</button>
+                </div>
+                <div class="book__card">
+                    <img src="assets/img/_book/book_03.png" alt="" class="book__image">
+                    <div class="book__header">
+                        <p class="book__title">Lập trình ngôn ngữ tư duy</p>
+                        <p class="book__price">120,000<sup>đ</sup></p>
+                    </div>
+                    <button class="btn btn__buy__book">Mua ngay</button>
+                </div>
+                <div class="book__card">
+                    <img src="assets/img/_book/book_04.png" alt="" class="book__image">
+                    <div class="book__header">
+                        <p class="book__title">Lập trình ngôn ngữ tư duy</p>
+                        <p class="book__price">120,000<sup>đ</sup></p>
+                    </div>
+                    <button class="btn btn__buy__book">Mua ngay</button>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- End Main -->
 
