feat(book) change and add variables of book
add grid card of book
add flag new for card

Close

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <h4 class="title">Sách</h4>
             <div class="grid">
                 <div class="book__card">
-                    <img src="assets/img/_book/book_01.png" alt="" class="book__image">
+                    <img src="assets/img/_book/book_01.png" alt="" class="book__image none__white">
                     <div class="book__header">
                         <p class="book__title">Lập trình ngôn ngữ tư duy</p>
                         <p class="book__price">120,000<sup>đ</sup></p>
@@ -137,23 +137,25 @@
                     <button class="btn btn__buy__book">Mua ngay</button>
                 </div>
                 <div class="book__card">
-                    <img src="assets/img/_book/book_02.png" alt="" class="book__image">
+                    <img src="assets/img/_book/book_02.png" alt="" class="book__image none__white">
                     <div class="book__header">
                         <p class="book__title">Lập trình ngôn ngữ tư duy</p>
                         <p class="book__price">120,000<sup>đ</sup></p>
                     </div>
                     <button class="btn btn__buy__book">Mua ngay</button>
+                    <div class="book__flag__new">New</div>
                 </div>
                 <div class="book__card">
-                    <img src="assets/img/_book/book_03.png" alt="" class="book__image">
+                    <img src="assets/img/_book/book_03.png" alt="" class="book__image have__white">
                     <div class="book__header">
                         <p class="book__title">Lập trình ngôn ngữ tư duy</p>
                         <p class="book__price">120,000<sup>đ</sup></p>
                     </div>
                     <button class="btn btn__buy__book">Mua ngay</button>
+                    <div class="book__flag__new">New</div>
                 </div>
                 <div class="book__card">
-                    <img src="assets/img/_book/book_04.png" alt="" class="book__image">
+                    <img src="assets/img/_book/book_04.png" alt="" class="book__image have__white">
                     <div class="book__header">
                         <p class="book__title">Lập trình ngôn ngữ tư duy</p>
                         <p class="book__price">120,000<sup>đ</sup></p>
