--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                 <input type="text" placeholder="Search...">
                 <img src="assets/img/search-icon.png" alt="Search" id="search">
             </div>
-        </div>
-    </nav>
+        </div> <!-- End Container -->
+    </nav>  <!-- End Navigation -->
+
     <!-- Main -->
     <main>
         <!--  Section Home Start -->
@@ -124,7 +125,8 @@
                 <a href="#" class="play"><i class="fas fa-play"></i></a>
             </div>
         </section> <!--  Section Introduce End -->
-        <!--  Section Introduce Start -->
+
+        <!--  Section Book Start -->
         <section class="book container">
             <h4 class="title">Sách</h4>
             <div class="grid">
@@ -163,7 +165,125 @@
                     <button class="btn btn__buy__book">Mua ngay</button>
                 </div>
             </div>
-        </section>
+        </section> <!--  Section Book End -->
+
+        <!--  Section Online Start -->
+        <section class="online">
+            <div class="container">
+
+                <!--  Grid Option Course Start -->
+                <div class="nav__grid">
+                    <a href="#" class="online__link course">
+                        <img src="assets/img/_online/course_icon.png" alt="Course" class="online__icon">
+                        <p>Khoá học</p>
+                    </a>
+                    <a href="#" class="online__link videos active">
+                        <img src="assets/img/_online/video_icon.png" alt="Videos" class="online__icon">
+                        <p>Videos</p>
+                    </a>
+                    <a href="#" class="online__link audios">
+                        <img src="assets/img/_online/audios_icon.png" alt="Audios" class="online__icon">
+                        <p>Audios</p>
+                    </a>
+                    <a href="#" class="online__link ebook">
+                        <img src="assets/img/_online/ebook_icon.png" alt="Ebook" class="online__icon">
+                        <p>Ebook</p>
+                    </a>
+                </div> <!--  Grid Option Course End -->
+
+                <div class="suggest__course">
+                    <a href="" class="suggest__course__link">
+                        <i class="far fa-eye"></i>
+                        <p>Xem nhiều nhất</p>
+                    </a>
+                    <a href="" class="suggest__course__link">
+                        <i class="far fa-bookmark"></i>
+                        <p>Mới nhất</p>
+                    </a>
+                    <a href="" class="suggest__course__link">
+                        <i class="far fa-thumbs-up"></i>
+                        <p>Được quan tâm</p>
+                    </a>
+                    <a href="" class="suggest__course__link">
+
+                        <p>Miễn phí</p>
+                    </a>
+                </div>
+                <h4 class="title">Khoá học online</h4>
+
+                <!--  Grid Course Online Start -->
+                <div class="course__grid">
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_01.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_02.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                        <div class="course__flag__new">New</div>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_03.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                        <div class="course__flag__new">New</div>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_04.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_01.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_02.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                        <div class="course__flag__new">New</div>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_03.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                        <div class="course__flag__new">New</div>
+                    </div>
+                    <div class="course__card">
+                        <img src="assets/img/_book/book_04.png" alt="" class="course__image none__white">
+                        <div class="course__header">
+                            <p class="course__title">Lập trình ngôn ngữ tư duy</p>
+                            <p class="course__price">120,000<sup>đ</sup></p>
+                        </div>
+                        <button class="btn btn__buy__course">Mua ngay</button>
+                    </div>
+                </div> <!--  Grid Course Online End -->
+            </div>
+        </section> <!--  Section Online End -->
     </main>
     <!-- End Main -->
 
