fix(online) div online section to two section
div online section to online section and navOfOnline section

Close

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!--  Section Introduce Start -->
         <section class="introduce" >
             <div class="introduce__container" style="background-color: rgba(0, 0, 0, 0.5)">
-                <div class="introduce__container__content       ">
+                <div class="introduce__container__content">
                     <h4 class="title">Khoá học & sự kiện</h4>
                     <div class="content">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
@@ -127,7 +127,7 @@
         </section> <!--  Section Introduce End -->
 
         <!--  Section Book Start -->
-        <section class="book container">
+        <section id="sec3" class="book container">
             <h4 class="title">Sách</h4>
             <div class="grid">
                 <div class="book__card">
@@ -167,33 +167,36 @@
             </div>
         </section> <!--  Section Book End -->
 
-        <!--  Section Online Start -->
-        <section class="online">
-            <div class="container">
-                <!--  Grid Option Course Start -->
-                <div class="online__grid">
-                    <a href="#course" class="online__link">
-                        <img src="assets/img/_online/course_icon.png" alt="Course" class="online__icon">
-                        <p>Khoá học</p>
-                        <div class="arrow__icon"></div>
-                    </a>
-                    <a href="#videos" class="online__link online__link__active">
-                        <img src="assets/img/_online/video_icon.png" alt="Videos" class="online__icon">
-                        <p>Videos</p>
-                        <div class="arrow__icon"></div>
-                    </a>
-                    <a href="#audios" class="online__link">
-                        <img src="assets/img/_online/audios_icon.png" alt="Audios" class="online__icon">
-                        <p>Audios</p>
-                        <div class="arrow__icon"></div>
-                    </a>
-                    <a href="#ebook" class="online__link">
-                        <img src="assets/img/_online/ebook_icon.png" alt="Ebook" class="online__icon">
-                        <p>Ebook</p>
-                        <div class="arrow__icon"></div>
-                    </a>
-                </div> <!--  Grid Option Course End -->
+        <!--Section Nav of Online Start-->
+        <section class="nav__online">
+            <!--  Grid Option Course Start -->
+            <div class="container nav__online__grid">
+                <a href="#course" class="nav__online__link">
+                    <img src="assets/img/_online/course_icon.png" alt="Course" class="nav__online__icon">
+                    <p>Khoá học</p>
+                    <div class="arrow__icon"></div>
+                </a>
+                <a href="#videos" class="nav__online__link nav__online__link__active">
+                    <img src="assets/img/_online/video_icon.png" alt="Videos" class="nav__online__icon">
+                    <p>Videos</p>
+                    <div class="arrow__icon"></div>
+                </a>
+                <a href="#audios" class="nav__online__link">
+                    <img src="assets/img/_online/audios_icon.png" alt="Audios" class="nav__online__icon">
+                    <p>Audios</p>
+                    <div class="arrow__icon"></div>
+                </a>
+                <a href="#ebook" class="nav__online__link">
+                    <img src="assets/img/_online/ebook_icon.png" alt="Ebook" class="nav__online__icon">
+                    <p>Ebook</p>
+                    <div class="arrow__icon"></div>
+                </a>
+            </div> <!--  Grid Option Course End -->
+        </section> <!--Section Nav of Online End-->
 
+        <!--  Section Online Start -->
+        <section id="sec4" class="online">
+            <div class="container">
                 <!--Title of Online section start-->
                 <div class="online__title">
                     <h4 class="title">Khoá học online</h4>
@@ -297,6 +300,7 @@
                 </div><!--Footer of online section End-->
             </div>
         </section> <!--  Section Online End -->
+
     </main>
     <!-- End Main -->
 
