feat() add _event section
add elements of _event section

Close

--- a/index.html
+++ b/index.html
@@ -301,6 +301,30 @@
             </div>
         </section> <!--  Section Online End -->
 
+        <section id="sec5" class="event">
+            <div class="event__banner" style="background: url('assets/img/_event/event_offline.png')">
+                <div class="event__banner__content">
+                    <p>15 tháng 12, 2019</p>
+                    <h3>It S Classisfied How To Utilize Free ClassifiedAd Sites To Boost Business</h3>
+                </div>
+                <button class="btn btn__sign__up__join">Đăng ký tham gia</button>
+            </div>
+            <div class="event__info">
+                <h4 class="event__info__title title">Sự kiện offline</h4>
+                <div class="event__info__grid">
+                    <div class="grid__item">
+                        <div class="calendar"></div>
+                        <div class="description">
+                            <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
+                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <a href="#" class="description__sign__up__join transform__modal">Đăng ký tham gia</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- End Main -->
 
