style(event) add and style event section
add and style event section

Close

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Language" content="en-us"/>
-    <title></title>
+    <title>Smart money institute</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
@@ -313,7 +313,22 @@
                 <h4 class="event__info__title title">Sự kiện offline</h4>
                 <div class="event__info__grid">
                     <div class="grid__item">
-                        <div class="calendar"></div>
+                        <div class="date">
+                            <p class="day">15</p>
+                            <p class="month">08</p>
+                        </div>
+                        <div class="description">
+                            <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
+                            <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
+                            <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
+                            <a href="#" class="description__sign__up__join transform__modal">Đăng ký tham gia</a>
+                        </div>
+                    </div>
+                    <div class="grid__item">
+                        <div class="date">
+                            <p class="day">15</p>
+                            <p class="month">08</p>
+                        </div>
                         <div class="description">
                             <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
                             <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
@@ -324,7 +339,6 @@
                 </div>
             </div>
         </section>
-
     </main>
     <!-- End Main -->
 
