style(online, event) style event info, add color background for online section
 style event info, add color background for online section

Close

--- a/index.html
+++ b/index.html
@@ -296,7 +296,6 @@
                 <!--Footer of online section Start-->
                 <div class="online__footer transform__modal">
                     <a href="#">Xem tất cả <span></span></a>
-
                 </div><!--Footer of online section End-->
             </div>
         </section> <!--  Section Online End -->
@@ -321,9 +320,12 @@
                             <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
                             <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
                             <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
-                            <a href="#" class="description__sign__up__join transform__modal">Đăng ký tham gia</a>
+                            <div class="description__sign__up__join transform__modal">
+                                <a href="#">Đăng ký tham gia <span></span></a>
+                            </div>
                         </div>
                     </div>
+                    <br>
                     <div class="grid__item">
                         <div class="date">
                             <p class="day">15</p>
@@ -333,12 +335,15 @@
                             <p class="description__time"><span>Free</span> <i>Từ 9:00 đến 12:00</i></p>
                             <h4 class="description__title">Advertisers Embrace Rich Media Format</h4>
                             <p class="description__content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo ..</p>
-                            <a href="#" class="description__sign__up__join transform__modal">Đăng ký tham gia</a>
+                            <div class="description__sign__up__join transform__modal">
+                                <a href="#">Đăng ký tham gia <span></span></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        
     </main>
     <!-- End Main -->
 
